# minio-client

./: LICENSE  README.md  pyproject.toml
src/minio_client/: __init__.py  main.py
tests/: test_minio_client.py
