[project]
name = "minio-client"
version = "0.1.0"
description = "Python client for MinIO object storage"
authors = [
    {name = "Franklin Gómez",email = "fgomezotero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "minio (>=7.2.16,<8.0.0)"
]

[tool.poetry]
packages = [{include = "minio_client", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
